Bug 149668 - FILESAVE: DOCX->ODT: Multilevel lists causing list numbering reset
Summary: FILESAVE: DOCX->ODT: Multilevel lists causing list numbering reset
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 beta1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0 target:7.4.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2022-06-22 07:06 UTC by Michelle
Modified: 2023-06-14 13:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file which reproduces the bug #1 (14.33 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-06-22 07:08 UTC, Michelle
Details
Sample file which reproduces the bug #2 (14.51 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-06-22 07:09 UTC, Michelle
Details
Docx and Odt Comparison #1 (65.92 KB, image/png)
2022-06-22 07:13 UTC, Michelle
Details
Docx and Odt Comparison #2 (64.28 KB, image/png)
2022-06-22 07:13 UTC, Michelle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michelle 2022-06-22 07:06:36 UTC
Description:
Some Docx files which contain multilevel lists are having the outer lists numbering reset when converted to odt.

Likely a regression as this cannot be reproduced with 7.3.4.2 or below.

Possibly related to this bug: https://bugs.documentfoundation.org/show_bug.cgi?id=148050

Steps to Reproduce:
1. Open attached example files in LibreOffice 7.4.0.0 beta1+
2. Save as ODT
3. Close ODT file and reopen 
4. Compare with original file

Actual Results:
Outer level numbering does not match between formats.

Expected Results:
Consistency between numbering.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 7.4.0.0.beta1 (x64) / LibreOffice Community
Build ID: cec1fe9b57a55c032f9f118c907f34e22a63d040
CPU threads: 16; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-AU (en_AU); UI: en-GB
Calc: CL
Comment 1 Michelle 2022-06-22 07:08:46 UTC
Created attachment 180887 [details]
Sample file which reproduces the bug #1
Comment 2 Michelle 2022-06-22 07:09:02 UTC
Created attachment 180888 [details]
Sample file which reproduces the bug #2
Comment 3 Michelle 2022-06-22 07:13:03 UTC
Created attachment 180889 [details]
Docx and Odt Comparison #1
Comment 4 Michelle 2022-06-22 07:13:22 UTC
Created attachment 180890 [details]
Docx and Odt Comparison #2
Comment 5 Rafael Lima 2022-06-22 19:12:07 UTC
Repro with

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: cb83063cc0eb4e93bd44bc0cb9b7c4841230cdef
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded

Not repro with

Version: 7.3.3.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.3~rc2-0ubuntu0.21.10.1~lo1
Calc: threaded
Comment 6 raal 2022-06-23 15:25:15 UTC
This seems to have begun at the below commit.
Adding Cc: to Miklos Vajna; Could you possibly take a look at this one?
Thanks
 b173f5bff96d87cd2b9b46859b414b722eb43d3f is the first bad commit
commit b173f5bff96d87cd2b9b46859b414b722eb43d3f
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Mar 10 20:16:38 2022 +0100

    source 8f48f91009caa86d896f247059874242ed18bf39

https://git.libreoffice.org/core/+/8f48f91009caa86d896f247059874242ed18bf39
Comment 7 Commit Notification 2022-06-27 10:38:02 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5938687e5764ee50759374b54d2bb1cf0e0d59d3

tdf#149668 sw: fix DOCX->ODT: Multilevel lists causing list numbering reset

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-06-27 12:45:28 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/6e66573f5d589b49865ddf9febda925da5cb1d68

tdf#149668 sw: fix DOCX->ODT: Multilevel lists causing list numbering reset

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.